# kawa

./: CMakeLists.txt  Makefile  README.md  ast.c  ast.h  lexer.l  lexertester.c  manual.h  parser.y  parsertester.c  tokens-manual.h
include/: ast.h  parser_defs.h  printer.h  symtable.h
src/: CMakeLists.txt  ast.c  lexer.c  lexer.l  lexertester.c  parser.y  parsertester.c  printer.c  symtable.c
tests/ptests/: exprtests.c  exprtests.out
